force-app/main/default/objects/Governance_Event__c/Governance_Event__c.object-meta.xml
<CustomObject>
    <description>Governance event triggered by forecast rules engine for approval, escalation, and audit.</description>
    <label>Governance Event</label>
    <nameField><label>Governance Event Name</label><type>AutoNumber</type><displayFormat>GE-{000000}</displayFormat></nameField>
    <pluralLabel>Governance Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>