force-app/main/default/objects/Governance_Event__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <description>Action Type</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Require_Justification</fullName><default>false</default><label>Require_Justification</label></value>
            <value><fullName>Require_Approval</fullName><default>false</default><label>Require_Approval</label></value>
            <value><fullName>Escalate</fullName><default>false</default><label>Escalate</label></value>
            <value><fullName>Alert</fullName><default>false</default><label>Alert</label></value>
            <value><fullName>Warn</fullName><default>false</default><label>Warn</label></value>
            <value><fullName>Badge</fullName><default>false</default><label>Badge</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>