force-app/main/default/objects/Governance_Event__c/fields/Attainment_At_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Attainment_At_Trigger__c</fullName>
    <label>Attainment At Trigger</label>
    <description>Attainment At Trigger</description>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>