force-app/main/default/objects/Governance_Event__c/fields/Compensation_Context__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Context__c</fullName>
    <label>Compensation Context</label>
    <description>Compensation Context</description>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>