force-app/main/default/objects/Governance_Event__c/fields/Forecast_Override__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Override__c</fullName>
    <label>Forecast Override</label>
    <description>Forecast Override</description>
    <type>Lookup</type>
    <referenceTo>Forecast_Override__c</referenceTo>
    <relationshipLabel>Governance Events</relationshipLabel>
    <relationshipName>Governance_Events</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>