force-app/main/default/objects/Governance_Event__c/fields/Forecast_Period__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Period__c</fullName>
    <label>Forecast Period</label>
    <description>Forecast Period</description>
    <type>Lookup</type>
    <referenceTo>Forecast_Period__c</referenceTo>
    <relationshipLabel>Governance Events</relationshipLabel>
    <relationshipName>Governance_Events_Period</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>