force-app/main/default/objects/Governance_Event__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <label>Justification</label>
    <description>Justification</description>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>