force-app/main/default/objects/Governance_Event__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <description>Opportunity</description>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Governance Events</relationshipLabel>
    <relationshipName>Governance_Events_Opp</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>