force-app/main/default/objects/Governance_Event__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <label>Participant</label>
    <description>Participant</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Governance Events</relationshipLabel>
    <relationshipName>Governance_Events_User</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>