force-app/main/default/objects/Governance_Event__c/fields/Payout_Delta__c.field-meta.xml
<CustomField>
    <fullName>Payout_Delta__c</fullName>
    <label>Payout Delta</label>
    <description>Payout Delta</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>