force-app/main/default/objects/Governance_Event__c/fields/Resolution_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Notes__c</fullName>
    <label>Resolution Notes</label>
    <description>Resolution Notes</description>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>