force-app/main/default/objects/Governance_Event__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <label>Reviewer</label>
    <description>Reviewer</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Governance Reviews</relationshipLabel>
    <relationshipName>Governance_Reviews</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>