force-app/main/default/objects/Governance_Event__c/fields/Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Rule_Id__c</fullName>
    <label>Rule Id</label>
    <description>Rule Id</description>
    <type>Text</type>
    <length>10</length>
</CustomField>