force-app/main/default/objects/Governance_Event__c/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <label>Rule Name</label>
    <description>Rule Name</description>
    <type>Text</type>
    <length>100</length>
</CustomField>