force-app/main/default/objects/Governance_Event__c/fields/Stale_Basis__c.field-meta.xml
<CustomField>
    <fullName>Stale_Basis__c</fullName>
    <label>Stale Basis</label>
    <description>Stale Basis</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>