force-app/main/default/objects/Governance_Event__c/fields/Threshold_Proximity__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Proximity__c</fullName>
    <label>Threshold Proximity</label>
    <description>Threshold Proximity</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>