force-app/main/default/objects/Governance_Event__c/fields/Tier_At_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Tier_At_Trigger__c</fullName>
    <label>Tier At Trigger</label>
    <description>Tier At Trigger</description>
    <type>Text</type>
    <length>50</length>
</CustomField>